# s3all

./: README.md  pyproject.toml
s3do/: __main__.py  tag.py
s3do/commands/: inventory.py  tag.py
tests/s3do/: test_inventory.py  test_tag.py  test_utils.py
